staticweb/manifest/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: "public.ecr.aws/u9g3j7w4/argocd:4edbd49102cb0cdf01254ffcd163bf5af7903a8b"
          imagePullPolicy: Always
          ports:
            - containerPort: 80
